--- a/vfp_detector.ipynb
+++ b/vfp_detector.ipynb
@@ -24,8 +24,9 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from io import BytesIO\n",
     "import pickle\n",
-    "\n",
+    "import requests\n",
     "pd.set_option('display.max_columns', None)"
    ]
   },
@@ -125,10 +126,9 @@
     "model_name = 'less-biased'\n",
     "training_model_name = 'rf'\n",
     "task = 'speech'\n",
-    "\n",
-    "url_path = f'https://github.com/danielmlow/vfp/raw/main/data/output/{training_model_name}_{model_name}_{task}.pkl' # speech models trained on reading task\n",
-    "with open(url_path, 'rb') as f:\n",
-    "    model = pickle.load(f)\n"
+    "url_path = f'https://github.com/danielmlow/vfp/blob/main/data/output/{training_model_name}_{model_name}_{task}.pkl?raw=true' # speech models trained on reading task\n",
+    "mfile = BytesIO(requests.get(url_path).content) # load from url\n",
+    "model = pickle.load(mfile)"
    ]
   },
   {
