after review adding audio duration effects

--- a/classification_wo_correlated_features.ipynb
+++ b/classification_wo_correlated_features.ipynb
@@ -1942,16 +1942,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "74"
+       "2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1962,10 +1962,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(45, 2)\n",
+      "(30, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(correlated_features[correlated_features['dcor']>0.3].shape)\n",
+    "print(correlated_features[correlated_features['dcor']>0.4].shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "correlated_features[correlated_features['dcor']>0.3].round(2).to_csv(output_dir+'uncorrelated_dcor-030.csv')"
+   ]
   },
   {
    "cell_type": "code",
@@ -1999,27 +2020,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>55</th>\n",
+       "      <th>43</th>\n",
        "      <td>spectralFlux_sma3_amean</td>\n",
        "      <td>0.895153</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>22</th>\n",
        "      <td>spectralFluxV_sma3nz_amean</td>\n",
        "      <td>0.883195</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>59</th>\n",
+       "      <th>58</th>\n",
        "      <td>F0semitoneFrom27.5Hz_sma3nz_percentile20.0</td>\n",
        "      <td>0.851661</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>64</th>\n",
+       "      <th>52</th>\n",
        "      <td>F0semitoneFrom27.5Hz_sma3nz_amean</td>\n",
        "      <td>0.824917</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
+       "      <th>31</th>\n",
        "      <td>spectralFluxUV_sma3nz_amean</td>\n",
        "      <td>0.800941</td>\n",
        "    </tr>\n",
@@ -2029,27 +2050,27 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>53</th>\n",
        "      <td>mfcc4V_sma3nz_stddevNorm</td>\n",
        "      <td>0.182662</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49</th>\n",
+       "      <th>41</th>\n",
        "      <td>mfcc4_sma3_stddevNorm</td>\n",
        "      <td>0.169817</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>60</th>\n",
        "      <td>F3bandwidth_sma3nz_amean</td>\n",
        "      <td>0.149941</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>30</th>\n",
        "      <td>mfcc3V_sma3nz_stddevNorm</td>\n",
        "      <td>0.127532</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
+       "      <th>5</th>\n",
        "      <td>slopeV0-500_sma3nz_stddevNorm</td>\n",
        "      <td>0.112906</td>\n",
        "    </tr>\n",
@@ -2060,17 +2081,17 @@
       ],
       "text/plain": [
        "                                other_features      dcor\n",
-       "55                     spectralFlux_sma3_amean  0.895153\n",
-       "10                  spectralFluxV_sma3nz_amean  0.883195\n",
-       "59  F0semitoneFrom27.5Hz_sma3nz_percentile20.0  0.851661\n",
-       "64           F0semitoneFrom27.5Hz_sma3nz_amean  0.824917\n",
-       "22                 spectralFluxUV_sma3nz_amean  0.800941\n",
+       "43                     spectralFlux_sma3_amean  0.895153\n",
+       "22                  spectralFluxV_sma3nz_amean  0.883195\n",
+       "58  F0semitoneFrom27.5Hz_sma3nz_percentile20.0  0.851661\n",
+       "52           F0semitoneFrom27.5Hz_sma3nz_amean  0.824917\n",
+       "31                 spectralFluxUV_sma3nz_amean  0.800941\n",
        "..                                         ...       ...\n",
-       "4                     mfcc4V_sma3nz_stddevNorm  0.182662\n",
-       "49                       mfcc4_sma3_stddevNorm  0.169817\n",
-       "1                     F3bandwidth_sma3nz_amean  0.149941\n",
-       "9                     mfcc3V_sma3nz_stddevNorm  0.127532\n",
-       "27               slopeV0-500_sma3nz_stddevNorm  0.112906\n",
+       "53                    mfcc4V_sma3nz_stddevNorm  0.182662\n",
+       "41                       mfcc4_sma3_stddevNorm  0.169817\n",
+       "60                    F3bandwidth_sma3nz_amean  0.149941\n",
+       "30                    mfcc3V_sma3nz_stddevNorm  0.127532\n",
+       "5                slopeV0-500_sma3nz_stddevNorm  0.112906\n",
        "\n",
        "[74 rows x 2 columns]"
       ]
