--- a/cpp.ipynb
+++ b/cpp.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "cf62552e-d4db-40fa-81d2-b84f81015bd0",
    "metadata": {},
    "outputs": [],
@@ -38,12 +38,14 @@
     "from sklearn.model_selection import GridSearchCV, train_test_split\n",
     "from sklearn.linear_model import LogisticRegressionCV, SGDClassifier\n",
     "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import GroupShuffleSplit\n",
+    "from sklearn import metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "aca4d1cd-33a8-493e-ac12-28c199baf509",
    "metadata": {},
    "outputs": [],
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "baedb6bc-de6c-47ab-b05d-e4eab2a4ff2e",
    "metadata": {},
    "outputs": [],
@@ -82,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "89c49700-d57a-4955-ace0-a9d4b8a46dde",
    "metadata": {},
    "outputs": [],
@@ -665,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "id": "9e958079-0343-4867-b1f4-d8831a4bd704",
    "metadata": {
     "id": "3Fp0uYpuCxav"
@@ -686,141 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "c57a1a19-bf8f-40c3-bc39-4d7255977884",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 188
-    },
-    "id": "trXEBnCwFUW6",
-    "outputId": "0151fa0b-b0a1-4ba7-e25a-b927e09d274d"
-   },
-   "outputs": [],
-   "source": [
-    "# bs = cross_validation.Bootstrap(151, n_bootstraps=50, random_state=123,n_test = 0.2)\n",
-    "# bs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "db66f1b9-f22c-485a-b11b-92f223fc9c2b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>LogisticRegressionCV</td>\n",
-       "      <td>SGDClassifier</td>\n",
-       "      <td>MLPClassifier</td>\n",
-       "      <td>RandomForestClassifier</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>.77 (.69–.81; )</td>\n",
-       "      <td>.74 (.41–.81; )</td>\n",
-       "      <td>.76 (.69–.82; )</td>\n",
-       "      <td>.73 (.65–.79; )</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      0                1                2  \\\n",
-       "0  LogisticRegressionCV    SGDClassifier    MLPClassifier   \n",
-       "1       .77 (.69–.81; )  .74 (.41–.81; )  .76 (.69–.82; )   \n",
-       "\n",
-       "                        3  \n",
-       "0  RandomForestClassifier  \n",
-       "1         .73 (.65–.79; )  "
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results_i_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "id": "42ae8d31-b7e3-44e8-9ea3-0500809559f8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['LogisticRegressionCV', '.77 (.69–.81; )'],\n",
-       " ['SGDClassifier', '.74 (.41–.81; )'],\n",
-       " ['MLPClassifier', '.76 (.69–.82; )'],\n",
-       " ['RandomForestClassifier', '.73 (.65–.79; )']]"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results_i"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "id": "67e5a9d7-13b9-4c8c-a6bb-9d06ed4095b1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(908, 4)"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "id": "40cc8b66-f724-46ce-beec-e61a184cd7d8",
    "metadata": {
     "colab": {
@@ -839,9 +707,9 @@
       "\n",
       "permute True\n",
       "LogisticRegressionCV .5\n",
-      "MLPClassifier .46\n",
-      "RandomForestClassifier .47\n",
-      "SGDClassifier .5\n",
+      "MLPClassifier .48\n",
+      "RandomForestClassifier .57\n",
+      "SGDClassifier .51\n",
       "\n",
       "permute False\n"
      ]
@@ -883,10 +751,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>.77 (.69–.81; )</td>\n",
-       "      <td>.76 (.69–.82; )</td>\n",
-       "      <td>.73 (.65–.8; )</td>\n",
-       "      <td>.75 (.36–.81; )</td>\n",
+       "      <td>.86 (.75–.93; )</td>\n",
+       "      <td>.86 (.75–.93; )</td>\n",
+       "      <td>.79 (.67–.87; )</td>\n",
+       "      <td>.85 (.55–.92; )</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -895,11 +763,11 @@
       "text/plain": [
        "                      0                1                       2  \\\n",
        "0  LogisticRegressionCV    MLPClassifier  RandomForestClassifier   \n",
-       "1       .77 (.69–.81; )  .76 (.69–.82; )          .73 (.65–.8; )   \n",
+       "1       .86 (.75–.93; )  .86 (.75–.93; )         .79 (.67–.87; )   \n",
        "\n",
        "                 3  \n",
        "0    SGDClassifier  \n",
-       "1  .75 (.36–.81; )  "
+       "1  .85 (.55–.92; )  "
       ]
      },
      "metadata": {},
@@ -952,6 +820,40 @@
       "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
       "  \"the number of iterations.\", ConvergenceWarning)\n",
       "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
       "  \"the number of iterations.\", ConvergenceWarning)\n"
      ]
     },
@@ -960,9 +862,9 @@
      "output_type": "stream",
      "text": [
       "LogisticRegressionCV .5\n",
-      "MLPClassifier .49\n",
-      "RandomForestClassifier .52\n",
-      "SGDClassifier .49\n",
+      "MLPClassifier .48\n",
+      "RandomForestClassifier .51\n",
+      "SGDClassifier .48\n",
       "\n",
       "permute False\n"
      ]
@@ -1004,23 +906,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>.81 (.75–.87; )</td>\n",
-       "      <td>.8 (.74–.87; )</td>\n",
-       "      <td>.77 (.7–.82; )</td>\n",
-       "      <td>.76 (.32–.84; )</td>\n",
+       "      <td>.87 (.8–.95; )</td>\n",
+       "      <td>.87 (.79–.95; )</td>\n",
+       "      <td>.82 (.73–.91; )</td>\n",
+       "      <td>.85 (.71–.94; )</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      0               1                       2  \\\n",
-       "0  LogisticRegressionCV   MLPClassifier  RandomForestClassifier   \n",
-       "1       .81 (.75–.87; )  .8 (.74–.87; )          .77 (.7–.82; )   \n",
+       "                      0                1                       2  \\\n",
+       "0  LogisticRegressionCV    MLPClassifier  RandomForestClassifier   \n",
+       "1        .87 (.8–.95; )  .87 (.79–.95; )         .82 (.73–.91; )   \n",
        "\n",
        "                 3  \n",
        "0    SGDClassifier  \n",
-       "1  .76 (.32–.84; )  "
+       "1  .85 (.71–.94; )  "
       ]
      },
      "metadata": {},
@@ -1033,35 +935,11 @@
       "both \n",
       "====\n",
       "\n",
-      "permute True\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  \"the number of iterations.\", ConvergenceWarning)\n",
-      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  \"the number of iterations.\", ConvergenceWarning)\n",
-      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  \"the number of iterations.\", ConvergenceWarning)\n",
-      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  \"the number of iterations.\", ConvergenceWarning)\n",
-      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  \"the number of iterations.\", ConvergenceWarning)\n",
-      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  \"the number of iterations.\", ConvergenceWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LogisticRegressionCV .5\n",
-      "MLPClassifier .49\n",
-      "RandomForestClassifier .51\n",
-      "SGDClassifier .5\n",
+      "permute True\n",
+      "LogisticRegressionCV .51\n",
+      "MLPClassifier .53\n",
+      "RandomForestClassifier .53\n",
+      "SGDClassifier .51\n",
       "\n",
       "permute False\n"
      ]
@@ -1103,10 +981,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>.73 (.69–.78; )</td>\n",
-       "      <td>.77 (.72–.81; )</td>\n",
-       "      <td>.74 (.69–.8; )</td>\n",
-       "      <td>.71 (.53–.78; )</td>\n",
+       "      <td>.81 (.73–.89; )</td>\n",
+       "      <td>.85 (.75–.91; )</td>\n",
+       "      <td>.79 (.71–.86; )</td>\n",
+       "      <td>.78 (.47–.89; )</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1115,11 +993,11 @@
       "text/plain": [
        "                      0                1                       2  \\\n",
        "0  LogisticRegressionCV    MLPClassifier  RandomForestClassifier   \n",
-       "1       .73 (.69–.78; )  .77 (.72–.81; )          .74 (.69–.8; )   \n",
+       "1       .81 (.73–.89; )  .85 (.75–.91; )         .79 (.71–.86; )   \n",
        "\n",
        "                 3  \n",
        "0    SGDClassifier  \n",
-       "1  .71 (.53–.78; )  "
+       "1  .78 (.47–.89; )  "
       ]
      },
      "metadata": {},
@@ -1129,8 +1007,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 18s, sys: 3min 10s, total: 6min 28s\n",
-      "Wall time: 2min 44s\n"
+      "CPU times: user 3min 8s, sys: 3min 19s, total: 6min 27s\n",
+      "Wall time: 2min 25s\n"
      ]
     }
    ],
@@ -1173,21 +1051,30 @@
     "                  ('scaler', StandardScaler()), \n",
     "                  ('model', model)])\n",
     "\n",
+    "          # ## Performing bootstrapping\n",
+    "          # for i in range(n_bootstraps):\n",
+    "          #     #Split the data into training and testing set\n",
+    "          #     from sklearn.model_selection import train_test_split\n",
+    "          #     # Chaning the seed value for each iteration\n",
+    "          #     X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42+i)\n",
+    "\n",
     "          ## Performing bootstrapping\n",
-    "          for i in range(n_bootstraps):\n",
-    "              #Split the data into training and testing set\n",
-    "              from sklearn.model_selection import train_test_split\n",
-    "              # Chaning the seed value for each iteration\n",
-    "              X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42+i)\n",
+    "          splitter = GroupShuffleSplit(n_splits=50, test_size=0.2, random_state=42)\n",
+    "          for i, (train_index, test_index) in enumerate(splitter.split(X, y, groups)):\n",
     "\n",
-    "          # for train_index, test_index in bs:\n",
-    "          #   X_train, X_test, y_train, y_test = X[train_index], X[test_index], y[train_index], y[test_index]\n",
-    "              pipe.fit(X_train,y_train)\n",
+    "              X_train, X_test = X[train_index], X[test_index]\n",
+    "              y_train, y_test = y[train_index], y[test_index]\n",
+    "              pipe.fit(X_train,y_train)     \n",
     "\n",
-    "              # Test     \n",
-    "              y_pred = pipe.predict(X_test)\n",
-    "              roc_auc = roc_auc_score(y_test,y_pred)\n",
-    "              # print(name, roc_auc)\n",
+    "              # # Evaluate\n",
+    "              # y_proba = pipe.predict_proba(X_test)       # Get predicted probabilities\n",
+    "              # y_proba_1 = y_proba[:,1]\n",
+    "              # y_pred = np.argmax(y_proba, axis=1) \n",
+    "              # roc_auc = metrics.roc_auc_score(y_test, y_proba_1)  \n",
+    "\n",
+    "              y_pred = pipe.predict(X_test) \n",
+    "              roc_auc = metrics.roc_auc_score(y_test, y_pred)  # ROC AUC takes probabilities but here we match what pydra-ml does: https://github.com/nipype/pydra-ml/issues/56\n",
+    "\n",
     "              y_pred_all[name].append(y_pred)\n",
     "              roc_auc_all[name].append(roc_auc)\n",
     "\n",
@@ -1206,12 +1093,12 @@
     "        if not null_model:\n",
     "            results_i_df = pd.DataFrame(results_i, ).T\n",
     "            display(results_i_df)\n",
-    "            results_i_df.to_csv(output_dir+f'cpp/results_cpp_{df_name}_permute-{null_model}.csv')\n",
+    "            results_i_df.to_csv(output_dir+f'cpp/results_cpp_{df_name}_permute-{null_model}_{ts}.csv')\n",
     "\n",
     "            \n",
     "                \n",
     "\n",
-    "        # pd.DataFrame(y_pred_all)\n"
+    "\n"
    ]
   },
   {
