models with group shuffle split roc auc using y_pred = pipe.predict(X_test)

--- a/cpp.ipynb
+++ b/cpp.ipynb
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "40cc8b66-f724-46ce-beec-e61a184cd7d8",
    "metadata": {
     "colab": {
@@ -707,9 +707,9 @@
       "\n",
       "permute True\n",
       "LogisticRegressionCV .5\n",
-      "MLPClassifier .48\n",
-      "RandomForestClassifier .57\n",
-      "SGDClassifier .51\n",
+      "MLPClassifier .46\n",
+      "RandomForestClassifier .55\n",
+      "SGDClassifier .5\n",
       "\n",
       "permute False\n"
      ]
@@ -751,10 +751,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>.86 (.75–.93; )</td>\n",
-       "      <td>.86 (.75–.93; )</td>\n",
-       "      <td>.79 (.67–.87; )</td>\n",
-       "      <td>.85 (.55–.92; )</td>\n",
+       "      <td>.76 (.64–.84; )</td>\n",
+       "      <td>.76 (.64–.84; )</td>\n",
+       "      <td>.71 (.64–.78; )</td>\n",
+       "      <td>.74 (.6–.84; )</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -763,11 +763,11 @@
       "text/plain": [
        "                      0                1                       2  \\\n",
        "0  LogisticRegressionCV    MLPClassifier  RandomForestClassifier   \n",
-       "1       .86 (.75–.93; )  .86 (.75–.93; )         .79 (.67–.87; )   \n",
+       "1       .76 (.64–.84; )  .76 (.64–.84; )         .71 (.64–.78; )   \n",
        "\n",
-       "                 3  \n",
-       "0    SGDClassifier  \n",
-       "1  .85 (.55–.92; )  "
+       "                3  \n",
+       "0   SGDClassifier  \n",
+       "1  .74 (.6–.84; )  "
       ]
      },
      "metadata": {},
@@ -854,6 +854,84 @@
       "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
       "  \"the number of iterations.\", ConvergenceWarning)\n",
       "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/Users/danielmlow/miniconda3/envs/pydra/lib/python3.7/site-packages/sklearn/svm/_base.py:975: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
       "  \"the number of iterations.\", ConvergenceWarning)\n"
      ]
     },
@@ -863,8 +941,8 @@
      "text": [
       "LogisticRegressionCV .5\n",
       "MLPClassifier .48\n",
-      "RandomForestClassifier .51\n",
-      "SGDClassifier .48\n",
+      "RandomForestClassifier .45\n",
+      "SGDClassifier .5\n",
       "\n",
       "permute False\n"
      ]
@@ -906,23 +984,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>.87 (.8–.95; )</td>\n",
-       "      <td>.87 (.79–.95; )</td>\n",
-       "      <td>.82 (.73–.91; )</td>\n",
-       "      <td>.85 (.71–.94; )</td>\n",
+       "      <td>.82 (.73–.9; )</td>\n",
+       "      <td>.82 (.71–.9; )</td>\n",
+       "      <td>.77 (.65–.85; )</td>\n",
+       "      <td>.77 (.4–.86; )</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      0                1                       2  \\\n",
-       "0  LogisticRegressionCV    MLPClassifier  RandomForestClassifier   \n",
-       "1        .87 (.8–.95; )  .87 (.79–.95; )         .82 (.73–.91; )   \n",
+       "                      0               1                       2  \\\n",
+       "0  LogisticRegressionCV   MLPClassifier  RandomForestClassifier   \n",
+       "1        .82 (.73–.9; )  .82 (.71–.9; )         .77 (.65–.85; )   \n",
        "\n",
-       "                 3  \n",
-       "0    SGDClassifier  \n",
-       "1  .85 (.71–.94; )  "
+       "                3  \n",
+       "0   SGDClassifier  \n",
+       "1  .77 (.4–.86; )  "
       ]
      },
      "metadata": {},
@@ -936,10 +1014,10 @@
       "====\n",
       "\n",
       "permute True\n",
-      "LogisticRegressionCV .51\n",
+      "LogisticRegressionCV .5\n",
       "MLPClassifier .53\n",
-      "RandomForestClassifier .53\n",
-      "SGDClassifier .51\n",
+      "RandomForestClassifier .5\n",
+      "SGDClassifier .49\n",
       "\n",
       "permute False\n"
      ]
@@ -981,10 +1059,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>.81 (.73–.89; )</td>\n",
-       "      <td>.85 (.75–.91; )</td>\n",
-       "      <td>.79 (.71–.86; )</td>\n",
-       "      <td>.78 (.47–.89; )</td>\n",
+       "      <td>.72 (.65–.8; )</td>\n",
+       "      <td>.74 (.68–.84; )</td>\n",
+       "      <td>.72 (.65–.78; )</td>\n",
+       "      <td>.68 (.44–.78; )</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -993,11 +1071,11 @@
       "text/plain": [
        "                      0                1                       2  \\\n",
        "0  LogisticRegressionCV    MLPClassifier  RandomForestClassifier   \n",
-       "1       .81 (.73–.89; )  .85 (.75–.91; )         .79 (.71–.86; )   \n",
+       "1        .72 (.65–.8; )  .74 (.68–.84; )         .72 (.65–.78; )   \n",
        "\n",
        "                 3  \n",
        "0    SGDClassifier  \n",
-       "1  .78 (.47–.89; )  "
+       "1  .68 (.44–.78; )  "
       ]
      },
      "metadata": {},
@@ -1007,8 +1085,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 8s, sys: 3min 19s, total: 6min 27s\n",
-      "Wall time: 2min 25s\n"
+      "CPU times: user 3min 13s, sys: 2min 47s, total: 6min 1s\n",
+      "Wall time: 2min 48s\n"
      ]
     }
    ],
@@ -1051,15 +1129,9 @@
     "                  ('scaler', StandardScaler()), \n",
     "                  ('model', model)])\n",
     "\n",
-    "          # ## Performing bootstrapping\n",
-    "          # for i in range(n_bootstraps):\n",
-    "          #     #Split the data into training and testing set\n",
-    "          #     from sklearn.model_selection import train_test_split\n",
-    "          #     # Chaning the seed value for each iteration\n",
-    "          #     X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42+i)\n",
     "\n",
     "          ## Performing bootstrapping\n",
-    "          splitter = GroupShuffleSplit(n_splits=50, test_size=0.2, random_state=42)\n",
+    "          splitter = GroupShuffleSplit(n_splits=50, test_size=0.2, random_state=0)\n",
     "          for i, (train_index, test_index) in enumerate(splitter.split(X, y, groups)):\n",
     "\n",
     "              X_train, X_test = X[train_index], X[test_index]\n",
