--- a/vfp_detector.ipynb
+++ b/vfp_detector.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/danielmlow/vfp/blob/main/vfp_detector.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -385,6 +385,10 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -401,10 +405,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.7.7"
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
     }
   },
   "nbformat": 4,
